--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
-  align-items: center;
   position: fixed;
+  align-items: center;
   z-index: 1;
   width: 100%;
   height: 80px;
@@ -13,11 +13,29 @@ header {
 }
 
 .logo {
+  margin-right: 12px;
   display: flex;
   padding-left: 30px;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.logo span {
+  display: flex;
+  align-items: center;
+  color: MediumAquamarine;
+  margin-left: 12px;
 }
 
 nav {
-  display: block;
   padding-right: 40px
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+a {
+  color: Black;
 }
