Add text column styles

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+}
+
+/* Header styles */
+
 header {
   display: flex;
   position: fixed;
@@ -28,6 +34,7 @@ header {
 }
 
 nav {
+  display: flex;
   padding-right: 40px
 }
 
@@ -38,4 +45,35 @@ nav span {
 
 a {
   color: Black;
+}
+
+/* Body styles */
+
+.main {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+div {
+  border: 1px solid Black;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
 }
