--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -77,3 +77,38 @@ div {
 .column.small {
   width: 240px;
 }
+
+.lead-story .image-content {
+  background-image: url("../../resources/images/img-story-main.png");
+  margin-top: 0;
+  font-size: 40px;
+  text-align: left;
+}
+
+.image-content {
+  font-family: Georgia;
+  font-weight: bold;
+  color: white;
+  height: 300px;
+}
+
+.fall-cancelled.image-content {
+  background-image: url("../../resources/images/img-story-2.png");
+  margin-top: 15px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.pop-culture.image-content {
+  background-image: url("../../resources/images/img-story-3.png");
+  margin-top: 15px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.cat-ceo.image-content {
+  background-image: url("../../resources/images/img-story-1.png");
+  margin-top: 15px;
+  font-size: 30px;
+  text-align: center;
+}
